--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo-container">
             <div class="logo">
-                <img src="/1741395834079.png" alt="Phoenix Rovers Logo" width="60">
+                <img src="1741395834079.png" alt="Phoenix Rovers Logo" width="60">
             </div>
             <div class="title">
                 <span class="phoenix">Phoenix</span>
