--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
         <div class="footer-container">
             <div class="footer-section footer-about">
                 <div class="footer-logo">
-                    <img src="/1741395834079.png" alt="Phoenix Rovers Logo" width="80">
+                    <img src="1741395834079.png" alt="Phoenix Rovers Logo" width="80">
                 </div>
                 <h3 class="footer-title">Phoenix Rovers</h3>
                 <p class="footer-description">Time de MamoBall fundado em 11 de março de 2025, foco em profissionalismo e organização.</p>
